@@ -62,7 +62,7 @@ assuan_get_pid (assuan_context_t ctx)
 /* Return user credentials. PID, UID and GID amy be gived as NULL if
    you are not interested in this value.  For getting the pid of the
    peer the assuan_get_pid is usually better suited. */
-#ifndef _WIN32
+#ifndef HAVE_W32_SYSTEM
 assuan_error_t
 assuan_get_peercred (assuan_context_t ctx, pid_t *pid, uid_t *uid, gid_t *gid)
 {
@@ -78,4 +78,4 @@ assuan_get_peercred (assuan_context_t ctx, pid_t *pid, uid_t *uid, gid_t *gid)
     *gid = ctx->peercred.gid;
   return 0;
 }
-#endif /*_WIN32*/
+#endif /* HAVE_W32_SYSTEM */
