@@ -1,3 +1,11 @@
+2007-07-04  Marcus Brinkmann  <marcus@g10code.de>
+
+	Change _WIN32 to HAVE_W32_SYSTEM for consistency.
+
+	* assuan-defs.h (struct assuan_context_s): Have full peercred
+	structure even if not HAVE_SO_PEERCRED, but not if
+	HAVE_W32_SYSTEM.
+
 2007-06-18  Werner Koch  <wk@g10code.com>
 
 	* assuan-logging.c (load_libgpg_error, _assuan_gpg_strerror_r) 
